--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,19 @@
 }
 
 .services {
-  background-image: url("../public/images/img-2.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
+  /* background-image: url("../public/images/img-2.jpg"); */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 images per row */
+  gap: 1px;
+  padding: 1px;
+  justify-content: center;
+}
+.fence-image {
+  width: 350px;
+  height: 350px;
+  object-fit: cover;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .products {
